--- a/yolov5Inference.ipynb
+++ b/yolov5Inference.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "video_path = 'inputs/media/Clips/'\n",
     "output_txt_path = 'outputs/yolo5_classification/'\n",
-    "custom_model = True\n",
+    "custom_model = False\n",
     "# custom_model = True\n",
     "\n",
     "def get_video_paths():\n",
@@ -43,7 +43,7 @@
      "output_type": "stream",
      "text": [
       "Downloading: \"https://github.com/ultralytics/yolov5/archive/master.zip\" to C:\\Users\\ethan/.cache\\torch\\hub\\master.zip\n",
-      "YOLOv5  2022-1-11 torch 1.10.1 CUDA:0 (NVIDIA GeForce RTX 2060, 6144MiB)\n",
+      "YOLOv5  2022-1-12 torch 1.10.1 CUDA:0 (NVIDIA GeForce RTX 2060, 6144MiB)\n",
       "\n",
       "Fusing layers... \n",
       "Model Summary: 213 layers, 7023610 parameters, 0 gradients, 15.8 GFLOPs\n",
@@ -54,16 +54,36 @@
    "source": [
     "model = None\n",
     "if custom_model:\n",
-    "    output_txt_path.replace('yolo5_classification', 'yolo5_classification_Ours')\n",
-    "    custom_model_path = 'custom_train\\\\yolov5\\\\runs\\\\train\\\\exp38\\weights\\\\last.pt'\n",
+    "    output_txt_path = output_txt_path.replace('yolo5_classification', 'yolo5_classification_Ours')\n",
+    "    custom_model_path = 'custom_train\\\\yolov5\\\\runs\\\\train\\\\exp42\\weights\\\\best.pt'\n",
     "    model = torch.hub.load('ultralytics/yolov5', 'custom', path=custom_model_path, force_reload=True)\n",
     "else:\n",
-    "    model = torch.hub.load('ultralytics/yolov5', 'yolov5m')\n"
+    "    model = torch.hub.load('ultralytics/yolov5', 'yolov5m', force_reload=True)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'outputs/yolo5_classification_Ours/'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_txt_path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +179,8 @@
     "        str_to_append += str(our_class_id) + ' ' + str(x_center) + ' ' + str(y_center) + ' ' + str(width) + ' ' + str(height) + '\\n'\n",
     "\n",
     "    # print('Saving Frame: ', frame_no)\n",
-    "    new_path=os.path.join(path, str(frame_no)+'.txt')\n",
+    "    new_path=os.path.join(path, str(frame_no).zfill(4)+'.txt')\n",
+    "    new_path = new_path.replace('.mp4', '')\n",
     "\n",
     "    # create if not exists\n",
     "    if not os.path.exists(new_path):\n",
@@ -173,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +246,7 @@
     "\n",
     "            if save:\n",
     "                size = frame.shape[:2]\n",
-    "                append_box_to_file(coord_path, frame_no, result, size)\n",
+    "                append_box_to_file(coord_path, int(frame_no), result, size)\n",
     "\n",
     "            if show_video:\n",
     "                img = draw_image(frame, result)\n",
@@ -239,14 +260,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 16 total videos\n",
+      "Found 24 total videos\n",
+      "Labelling video: inputs\\media\\Clips\\Background\\Test\\Day_1.mp4\n",
+      "Frame: 467.0/467.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Background\\Test\\Day_2.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Background\\Test\\Dry.mp4\n",
+      "Frame: 324.0/324.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Background\\Test\\Night_1.mp4\n",
+      "Frame: 306.0/306.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Background\\Test\\Night_2.mp4\n",
+      "Frame: 321.0/321.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Background\\Test\\Rain_1.mp4\n",
+      "Frame: 314.0/314.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Background\\Test\\Wet_Bright.mp4\n",
+      "Frame: 325.0/325.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Background\\Test\\Wet_Dim.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
       "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Day_1.mp4\n",
       "Frame: 467.0/467.0\n",
       "\n",
