--- a/our_datatset_tester.ipynb
+++ b/our_datatset_tester.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from object_detection import *\n",
     "import os\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "import cv2\n"
    ]
   },
   {
