--- a/yolov5Inference.ipynb
+++ b/yolov5Inference.ipynb
@@ -9,10 +9,7 @@
     "import os\n",
     "from pathlib import Path\n",
     "import cv2\n",
-    "import torch\n",
-    "from PIL import Image\n",
-    "from tqdm import tqdm\n",
-    "\n"
+    "import torch"
    ]
   },
   {
