now correctly outputting empty files

--- a/dataSetter.ipynb
+++ b/dataSetter.ipynb
@@ -63,46 +63,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Day_1_Test: 100%|██████████| 467/467 [00:06<00:00, 75.88it/s] \n",
-      "Processing Day_2_Test: 100%|██████████| 317/317 [00:04<00:00, 68.84it/s]\n",
-      "Processing Dry_Test: 100%|██████████| 324/324 [00:03<00:00, 102.24it/s]\n",
-      "Processing Night_1_Test: 100%|██████████| 306/306 [00:04<00:00, 62.00it/s]\n",
-      "Processing Night_2_Test: 100%|██████████| 321/321 [00:04<00:00, 68.76it/s]\n",
-      "Processing Rain_1_Test: 100%|██████████| 314/314 [00:01<00:00, 173.58it/s]\n",
-      "Processing Wet_Bright_Test: 100%|██████████| 325/325 [00:03<00:00, 95.52it/s] \n",
-      "Processing Wet_Dim_Test: 100%|██████████| 317/317 [00:03<00:00, 80.60it/s]\n",
-      "Processing Day_1_Train: 100%|██████████| 1025/1025 [00:14<00:00, 68.52it/s] \n",
-      "Processing Day_2_Train: 100%|██████████| 924/924 [00:13<00:00, 66.11it/s]\n",
-      "Processing Dry_Train: 100%|██████████| 1202/1202 [00:11<00:00, 102.72it/s]\n",
-      "Processing Night_1_Train: 100%|██████████| 1070/1070 [00:16<00:00, 63.16it/s]\n",
-      "Processing Night_2_Train: 100%|██████████| 915/915 [00:14<00:00, 62.39it/s]\n",
-      "Processing Rain_1_Train: 100%|██████████| 1057/1057 [00:06<00:00, 172.02it/s]\n",
-      "Processing Wet_Bright_Train: 100%|██████████| 1075/1075 [00:10<00:00, 98.35it/s] \n",
-      "Processing Wet_Dim_Train: 100%|██████████| 1205/1205 [00:10<00:00, 109.56it/s]\n",
-      "Processing Day_1_Test: 100%|██████████| 467/467 [00:06<00:00, 74.13it/s] \n",
-      "Processing Day_2_Test: 100%|██████████| 317/317 [00:06<00:00, 51.02it/s]\n",
-      "Processing Dry_Test: 100%|██████████| 324/324 [00:03<00:00, 83.25it/s]\n",
-      "Processing Night_1_Test: 100%|██████████| 306/306 [00:05<00:00, 56.96it/s]\n",
-      "Processing Night_2_Test: 100%|██████████| 321/321 [00:05<00:00, 58.19it/s]\n",
-      "Processing Rain_1_Test: 100%|██████████| 314/314 [00:02<00:00, 149.02it/s]\n",
-      "Processing Wet_Bright_Test: 100%|██████████| 325/325 [00:03<00:00, 83.86it/s]\n",
-      "Processing Wet_Dim_Test: 100%|██████████| 317/317 [00:03<00:00, 81.46it/s]\n",
-      "Processing Day_1_Train: 100%|██████████| 1025/1025 [00:12<00:00, 80.35it/s] \n",
-      "Processing Day_2_Train: 100%|██████████| 924/924 [00:17<00:00, 52.59it/s]\n",
-      "Processing Dry_Train: 100%|██████████| 1202/1202 [00:15<00:00, 77.49it/s]\n",
-      "Processing Night_1_Train: 100%|██████████| 1070/1070 [00:18<00:00, 56.35it/s]\n",
-      "Processing Night_2_Train: 100%|██████████| 915/915 [00:16<00:00, 54.60it/s]\n",
-      "Processing Rain_1_Train: 100%|██████████| 1057/1057 [00:07<00:00, 145.23it/s]\n",
-      "Processing Wet_Bright_Train: 100%|██████████| 1075/1075 [00:12<00:00, 83.95it/s]\n",
-      "Processing Wet_Dim_Train: 100%|██████████| 1205/1205 [00:14<00:00, 81.56it/s]\n",
-      "Processing Day_1_Val: 100%|██████████| 305/305 [00:03<00:00, 93.90it/s] \n",
-      "Processing Day_2_Val: 100%|██████████| 310/310 [00:06<00:00, 49.11it/s]\n",
-      "Processing Dry_Val: 100%|██████████| 324/324 [00:06<00:00, 46.36it/s]\n",
-      "Processing Night_1_Val: 100%|██████████| 322/322 [00:08<00:00, 39.28it/s]\n",
-      "Processing Night_2_Val: 100%|██████████| 311/311 [00:07<00:00, 41.98it/s]\n",
-      "Processing Rain_1_Val: 100%|██████████| 311/311 [00:04<00:00, 76.63it/s]\n",
-      "Processing Wet_Bright_Val: 100%|██████████| 325/325 [00:06<00:00, 52.45it/s]\n",
-      "Processing Wet_Dim_Val: 100%|██████████| 317/317 [00:05<00:00, 54.70it/s]\n"
+      "Processing Day_1_Test: 100%|██████████| 467/467 [00:14<00:00, 33.07it/s]\n",
+      "Processing Day_2_Test: 100%|██████████| 317/317 [00:10<00:00, 29.50it/s]\n",
+      "Processing Dry_Test: 100%|██████████| 324/324 [00:06<00:00, 50.16it/s]\n",
+      "Processing Night_1_Test: 100%|██████████| 306/306 [00:11<00:00, 27.79it/s]\n",
+      "Processing Night_2_Test: 100%|██████████| 321/321 [00:10<00:00, 31.71it/s]\n",
+      "Processing Rain_1_Test: 100%|██████████| 314/314 [00:05<00:00, 59.93it/s]\n",
+      "Processing Wet_Bright_Test: 100%|██████████| 325/325 [00:07<00:00, 43.28it/s]\n",
+      "Processing Wet_Dim_Test: 100%|██████████| 317/317 [00:07<00:00, 43.57it/s]\n",
+      "Processing Day_1_Train: 100%|██████████| 1025/1025 [00:27<00:00, 37.06it/s]\n",
+      "Processing Day_2_Train:   1%|          | 8/924 [00:00<00:28, 31.61it/s]"
      ]
     }
    ],
@@ -143,8 +113,9 @@
     "                continue\n",
     "            \n",
     "            contents = open(annotations_paths[i], 'r').readlines()\n",
-    "            if len(contents) == 0:\n",
-    "                continue\n",
+    "            # if len(contents) == 0:\n",
+    "            #     print('TXT FILE EMPTY')\n",
+    "            #     continue\n",
     "            \n",
     "            if not Path(labels_out_dir + vid_dir).exists():\n",
     "                Path(labels_out_dir + vid_dir).mkdir(parents=True)\n",
@@ -162,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
