changing label offsets

--- a/yolov5Inference.ipynb
+++ b/yolov5Inference.ipynb
@@ -56,7 +56,7 @@
     "if custom_model:\n",
     "    output_txt_path = output_txt_path.replace('yolo5_classification', 'yolo5_classification_Ours')\n",
     "    custom_model_path = 'custom_train\\\\yolov5\\\\runs\\\\train\\\\exp42\\weights\\\\best.pt'\n",
-    "    model = torch.hub.load('ultralytics/yolov5', 'custom', path=custom_model_path, force_reload=True)\n",
+    "    model = torch.hub.load('ultralytics/yolov5', 'custom', path=custom_model_path, force_reload=True, classes = 5)\n",
     "else:\n",
     "    model = torch.hub.load('ultralytics/yolov5', 'yolov5m', force_reload=True)\n"
    ]
@@ -143,11 +143,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'car': 0, 'motorbike': 1, 'truck': 2, 'bus': 4}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes = ['car', 'motorbike', 'truck', 'priority', 'bus']\n",
+    "coco_names = []\n",
+    "with open('inputs/weights/coco.names', 'r') as f:\n",
+    "    for line in f:\n",
+    "        coco_names.append(line.strip().lower())\n",
+    "\n",
+    "coco_ours_map = {}\n",
+    "for c in classes:\n",
+    "    if c in coco_names:\n",
+    "        coco_ours_map[c] = classes.index(c)\n",
+    "coco_ours_map\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classes = ['car', 'motorbike', 'truck', 'priority', 'bus']\n",
+    "classes = ['car', 'motorbike', 'truck', 'bus']\n",
     "coco_names = []\n",
     "with open('inputs/weights/coco.names', 'r') as f:\n",
     "    for line in f:\n",
