--- a/dataSetter.ipynb
+++ b/dataSetter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,57 +22,72 @@
     "clips_dir = 'inputs/media/Clips/'\n",
     "annotations_dir = 'inputs/annotations/'\n",
     "\n",
-    "classes = ['car', 'motorcycle', 'truck', 'priority', 'bus']\n",
+    "# classes = ['car', 'motorcycle', 'truck', 'priority', 'bus']\n",
+    "classes = ['car', 'motorbike', 'truck', 'priority', 'bus']\n",
     "\n",
     "rel_dir = 'datasets/OurDataSet/'\n",
     "\n",
     "images_out_dir = out_dir + 'images/'\n",
-    "labels_out_dir = out_dir + 'labels/'\n"
+    "labels_out_dir = out_dir + 'labels/'\n",
+    "\n",
+    "coco_ours = [3,4,8,6]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "yam_dir = out_dir + 'OurDataset.yaml'\n",
-    "train_dir = rel_dir + 'images/'+'train/'\n",
-    "val_dir = rel_dir + 'images/' + 'val/'\n",
     "\n",
     "nc = len(classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "videos = list(Path(clips_dir).rglob('*.mp4'))\n",
     "videos = [str(v) for v in videos]\n",
-    "# videos = [str(v) for v in videos if 'train' in str(v).lower()]\n"
+    "videos = [str(v) for v in videos if 'original' in str(v).lower()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Day_1_Test: 100%|██████████| 467/467 [00:14<00:00, 33.07it/s]\n",
-      "Processing Day_2_Test: 100%|██████████| 317/317 [00:10<00:00, 29.50it/s]\n",
-      "Processing Dry_Test: 100%|██████████| 324/324 [00:06<00:00, 50.16it/s]\n",
-      "Processing Night_1_Test: 100%|██████████| 306/306 [00:11<00:00, 27.79it/s]\n",
-      "Processing Night_2_Test: 100%|██████████| 321/321 [00:10<00:00, 31.71it/s]\n",
-      "Processing Rain_1_Test: 100%|██████████| 314/314 [00:05<00:00, 59.93it/s]\n",
-      "Processing Wet_Bright_Test: 100%|██████████| 325/325 [00:07<00:00, 43.28it/s]\n",
-      "Processing Wet_Dim_Test: 100%|██████████| 317/317 [00:07<00:00, 43.57it/s]\n",
-      "Processing Day_1_Train: 100%|██████████| 1025/1025 [00:27<00:00, 37.06it/s]\n",
-      "Processing Day_2_Train:   1%|          | 8/924 [00:00<00:28, 31.61it/s]"
+      "Processing Day_1_Test: 100%|██████████| 467/467 [00:09<00:00, 46.96it/s]\n",
+      "Processing Day_2_Test: 100%|██████████| 317/317 [00:07<00:00, 45.13it/s]\n",
+      "Processing Dry_Test: 100%|██████████| 324/324 [00:05<00:00, 64.03it/s]\n",
+      "Processing Night_1_Test: 100%|██████████| 306/306 [00:06<00:00, 49.59it/s]\n",
+      "Processing Night_2_Test: 100%|██████████| 321/321 [00:07<00:00, 44.46it/s]\n",
+      "Processing Rain_1_Test: 100%|██████████| 314/314 [00:02<00:00, 136.76it/s]\n",
+      "Processing Wet_Bright_Test: 100%|██████████| 325/325 [00:04<00:00, 77.14it/s]\n",
+      "Processing Wet_Dim_Test: 100%|██████████| 317/317 [00:04<00:00, 77.21it/s]\n",
+      "Processing Day_1_Train: 100%|██████████| 1025/1025 [00:17<00:00, 58.97it/s]\n",
+      "Processing Day_2_Train: 100%|██████████| 924/924 [00:17<00:00, 52.06it/s]\n",
+      "Processing Dry_Train: 100%|██████████| 1202/1202 [00:15<00:00, 76.33it/s]\n",
+      "Processing Night_1_Train: 100%|██████████| 1070/1070 [00:19<00:00, 54.21it/s]\n",
+      "Processing Night_2_Train: 100%|██████████| 915/915 [00:17<00:00, 53.36it/s]\n",
+      "Processing Rain_1_Train: 100%|██████████| 1057/1057 [00:07<00:00, 138.84it/s]\n",
+      "Processing Wet_Bright_Train: 100%|██████████| 1075/1075 [00:13<00:00, 80.60it/s]\n",
+      "Processing Wet_Dim_Train: 100%|██████████| 1205/1205 [00:16<00:00, 74.89it/s]\n",
+      "Processing Day_1_Val: 100%|██████████| 305/305 [00:05<00:00, 59.23it/s]\n",
+      "Processing Day_2_Val: 100%|██████████| 310/310 [00:06<00:00, 51.04it/s]\n",
+      "Processing Dry_Val: 100%|██████████| 324/324 [00:04<00:00, 68.76it/s]\n",
+      "Processing Night_1_Val: 100%|██████████| 322/322 [00:06<00:00, 47.89it/s]\n",
+      "Processing Night_2_Val: 100%|██████████| 311/311 [00:06<00:00, 48.61it/s]\n",
+      "Processing Rain_1_Val: 100%|██████████| 311/311 [00:02<00:00, 118.50it/s]\n",
+      "Processing Wet_Bright_Val: 100%|██████████| 325/325 [00:04<00:00, 67.89it/s]\n",
+      "Processing Wet_Dim_Val: 100%|██████████| 317/317 [00:04<00:00, 63.57it/s]\n"
      ]
     }
    ],
@@ -113,9 +128,11 @@
     "                continue\n",
     "            \n",
     "            contents = open(annotations_paths[i], 'r').readlines()\n",
-    "            # if len(contents) == 0:\n",
-    "            #     print('TXT FILE EMPTY')\n",
-    "            #     continue\n",
+    "            \n",
+    "            # remove priority classes\n",
+    "            contents = [str(0)+line[1:] if line.startswith('3') else line for line in contents]\n",
+    "            # contents = [str(0)+line[1:] if line.startswith('3') else line for line in contents]\n",
+    "\n",
     "            \n",
     "            if not Path(labels_out_dir + vid_dir).exists():\n",
     "                Path(labels_out_dir + vid_dir).mkdir(parents=True)\n",
@@ -133,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +183,7 @@
        "49"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,8 +191,6 @@
    "source": [
     "yam_file = open(yam_dir, 'w')\n",
     "yam_file.write('# This file is automatically generated by dataSetter.py\\n')\n",
-    "# yam_file.write('train: ' + train_dir + '\\n')\n",
-    "# yam_file.write('val: ' + val_dir + '\\n')\n",
     "\n",
     "yam_file.write('path: ' + path + '\\n')\n",
     "yam_file.write('train: ' + '\\n')\n",
