--- a/yolov5Inference.ipynb
+++ b/yolov5Inference.ipynb
@@ -20,8 +20,8 @@
    "source": [
     "video_path = 'inputs/media/Clips/'\n",
     "output_txt_path = 'outputs/yolo5_classification/'\n",
-    "custom_model = False\n",
-    "# custom_model = True\n",
+    "# custom_model = False\n",
+    "custom_model = True\n",
     "\n",
     "def get_video_paths():\n",
     "    \"\"\"\n",
@@ -40,7 +40,7 @@
      "output_type": "stream",
      "text": [
       "Downloading: \"https://github.com/ultralytics/yolov5/archive/master.zip\" to C:\\Users\\ethan/.cache\\torch\\hub\\master.zip\n",
-      "YOLOv5  2022-1-12 torch 1.10.1 CUDA:0 (NVIDIA GeForce RTX 2060, 6144MiB)\n",
+      "YOLOv5  2022-1-13 torch 1.10.1 CUDA:0 (NVIDIA GeForce RTX 2060, 6144MiB)\n",
       "\n",
       "Fusing layers... \n",
       "Model Summary: 213 layers, 7023610 parameters, 0 gradients, 15.8 GFLOPs\n",
@@ -52,8 +52,8 @@
     "model = None\n",
     "if custom_model:\n",
     "    output_txt_path = output_txt_path.replace('yolo5_classification', 'yolo5_classification_Ours')\n",
-    "    custom_model_path = 'custom_train\\\\yolov5\\\\runs\\\\train\\\\exp42\\weights\\\\best.pt'\n",
-    "    model = torch.hub.load('ultralytics/yolov5', 'custom', path=custom_model_path, force_reload=True, classes = 5)\n",
+    "    custom_model_path = 'custom_train\\\\yolov5\\\\runs\\\\train\\\\exp46\\weights\\\\best.pt'\n",
+    "    model = torch.hub.load('ultralytics/yolov5', 'custom', path=custom_model_path, force_reload=True)\n",
     "else:\n",
     "    model = torch.hub.load('ultralytics/yolov5', 'yolov5m', force_reload=True)\n"
    ]
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "{'car': 0, 'motorbike': 1, 'truck': 2, 'bus': 4}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,6 +270,7 @@
     "            frame_no = video.get(cv2.CAP_PROP_POS_FRAMES)\n",
     "            print(f'Frame: {frame_no}/{total_frames}',end='\\r')\n",
     "            result = classify_image(frame)\n",
+    "            # class_name = result.pandas().name[0]\n",
     "\n",
     "            if save:\n",
     "                size = frame.shape[:2]\n",
@@ -287,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 24 total videos\n",
+      "Found 8 total videos\n",
       "Labelling video: inputs\\media\\Clips\\Background\\Test\\Day_1.mp4\n",
       "Frame: 467.0/467.0\n",
       "\n",
@@ -318,65 +319,17 @@
       "\n",
       "Labelling video: inputs\\media\\Clips\\Background\\Test\\Wet_Dim.mp4\n",
       "Frame: 317.0/317.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Day_1.mp4\n",
-      "Frame: 467.0/467.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Day_2.mp4\n",
-      "Frame: 317.0/317.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Dry.mp4\n",
-      "Frame: 324.0/324.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Night_1.mp4\n",
-      "Frame: 306.0/306.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Night_2.mp4\n",
-      "Frame: 321.0/321.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Rain_1.mp4\n",
-      "Frame: 314.0/314.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Wet_Bright.mp4\n",
-      "Frame: 325.0/325.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Wet_Dim.mp4\n",
-      "Frame: 317.0/317.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Day_1.mp4\n",
-      "Frame: 467.0/467.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Day_2.mp4\n",
-      "Frame: 317.0/317.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Dry.mp4\n",
-      "Frame: 324.0/324.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Night_1.mp4\n",
-      "Frame: 306.0/306.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Night_2.mp4\n",
-      "Frame: 321.0/321.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Rain_1.mp4\n",
-      "Frame: 314.0/314.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Wet_Bright.mp4\n",
-      "Frame: 325.0/325.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Wet_Dim.mp4\n",
-      "Frame: 317.0/317.0\n",
       "\n"
      ]
     }
    ],
    "source": [
     "videos = get_video_paths()\n",
-    "# videos = [v for v in videos if 'original' in v.lower()]\n",
+    "videos = [v for v in videos if 'background' in v.lower()]\n",
     "videos = [v for v in videos if 'test' in v.lower()]\n",
     "print('Found {} total videos'.format(len(videos)))\n",
     "\n",
-    "label_videos(videos, show_video=False,save=True)\n"
+    "label_videos(videos, show_video=True,save=False)\n"
    ]
   }
  ],
