re-run on latestv ersions with backgroundStills

--- a/yolov5Inference.ipynb
+++ b/yolov5Inference.ipynb
@@ -21,7 +21,7 @@
     "video_path = 'inputs/media/Clips/'\n",
     "output_txt_path = 'outputs/yolo5_classification/'\n",
     "# custom_model = False\n",
-    "custom_model = True\n",
+    "custom_model = False\n",
     "\n",
     "def get_video_paths():\n",
     "    \"\"\"\n",
@@ -41,9 +41,36 @@
      "text": [
       "Downloading: \"https://github.com/ultralytics/yolov5/archive/master.zip\" to C:\\Users\\ethan/.cache\\torch\\hub\\master.zip\n",
       "YOLOv5  2022-1-13 torch 1.10.1 CUDA:0 (NVIDIA GeForce RTX 2060, 6144MiB)\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://github.com/ultralytics/yolov5/releases/download/v6.0/yolov5m.pt to yolov5m.pt...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 40.7M/40.7M [00:01<00:00, 27.2MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Fusing layers... \n",
-      "Model Summary: 213 layers, 7023610 parameters, 0 gradients, 15.8 GFLOPs\n",
+      "Model Summary: 290 layers, 21172173 parameters, 0 gradients\n",
       "Adding AutoShape... \n"
      ]
     }
@@ -66,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "'outputs/yolo5_classification_Ours/'"
+       "'outputs/yolo5_classification/'"
       ]
      },
      "execution_count": 4,
@@ -288,14 +315,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 8 total videos\n",
+      "Found 32 total videos\n",
       "Labelling video: inputs\\media\\Clips\\Background\\Test\\Day_1.mp4\n",
       "Frame: 467.0/467.0\n",
       "\n",
@@ -319,17 +346,89 @@
       "\n",
       "Labelling video: inputs\\media\\Clips\\Background\\Test\\Wet_Dim.mp4\n",
       "Frame: 317.0/317.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Day_1.mp4\n",
+      "Frame: 467.0/467.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Day_2.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Dry.mp4\n",
+      "Frame: 324.0/324.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Night_1.mp4\n",
+      "Frame: 306.0/306.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Night_2.mp4\n",
+      "Frame: 321.0/321.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Rain_1.mp4\n",
+      "Frame: 314.0/314.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Wet_Bright.mp4\n",
+      "Frame: 325.0/325.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Foreground\\Test\\Wet_Dim.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Day_1.mp4\n",
+      "Frame: 467.0/467.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Day_2.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Dry.mp4\n",
+      "Frame: 324.0/324.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Night_1.mp4\n",
+      "Frame: 306.0/306.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Night_2.mp4\n",
+      "Frame: 321.0/321.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Rain_1.mp4\n",
+      "Frame: 314.0/314.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Wet_Bright.mp4\n",
+      "Frame: 325.0/325.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\Original\\Test\\Wet_Dim.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\StillBackgroundClips\\Test\\Day_1.mp4\n",
+      "Frame: 467.0/467.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\StillBackgroundClips\\Test\\Day_2.mp4\n",
+      "Frame: 317.0/317.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\StillBackgroundClips\\Test\\Dry.mp4\n",
+      "Frame: 324.0/324.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\StillBackgroundClips\\Test\\Night_1.mp4\n",
+      "Frame: 306.0/306.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\StillBackgroundClips\\Test\\Night_2.mp4\n",
+      "Frame: 321.0/321.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\StillBackgroundClips\\Test\\Rain_1.mp4\n",
+      "Frame: 314.0/314.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\StillBackgroundClips\\Test\\Wet_Bright.mp4\n",
+      "Frame: 325.0/325.0\n",
+      "\n",
+      "Labelling video: inputs\\media\\Clips\\StillBackgroundClips\\Test\\Wet_Dim.mp4\n",
+      "Frame: 317.0/317.0\n",
       "\n"
      ]
     }
    ],
    "source": [
     "videos = get_video_paths()\n",
-    "videos = [v for v in videos if 'background' in v.lower()]\n",
+    "# videos = [v for v in videos if 'background' in v.lower()]\n",
     "videos = [v for v in videos if 'test' in v.lower()]\n",
     "print('Found {} total videos'.format(len(videos)))\n",
     "\n",
-    "label_videos(videos, show_video=True,save=False)\n"
+    "label_videos(videos, show_video=False,save=True)\n"
    ]
   }
  ],
