looking into centroids

--- a/objectTracking.ipynb
+++ b/objectTracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +85,89 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotations_path = 'outputs/Yolo5_OGAnnotations/yolo5_classification/'\n",
+    "annotations = Path(annotations_path).rglob('*.txt')\n",
+    "annotations = [str(a) for a in annotations]\n",
+    "annotations = [a for a in annotations if 'test' in a.lower()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fnid_centroid(x,y,w,h):\n",
+    "    x1, y1 = x, y\n",
+    "    x2, y2 = x + w, y + h\n",
+    "    return (x1 + x2) / 2, (y1 + y2) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def centroid_distance(x1,y1,x2,y2):\n",
+    "    return np.sqrt((x1-x2)**2 + (y1-y2)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "object_locations = {}\n",
+    "for a in annotations:\n",
+    "    annotations = open(a, 'r')\n",
+    "    annotations = annotations.readlines()\n",
+    "    annotations = [a.strip() for a in annotations]\n",
+    "    curr_centroids = []\n",
+    "    for a in annotations:\n",
+    "        a = a.split(' ')\n",
+    "        a = [int(x) for x in a]\n",
+    "        x, y, w, h = a[0], a[1], a[2], a[3]\n",
+    "        curr_centroids.append(fnid_centroid(x, y, w, h))\n",
+    "\n",
+    "    # match new centroids with old\n",
+    "    for c in curr_centroids:\n",
+    "        if len(object_locations) == 0:\n",
+    "            object_locations[c] = c\n",
+    "        else:\n",
+    "            min_dist = 1000\n",
+    "            min_centroid = len(object_locations)\n",
+    "            for id, o in object_locations.items():\n",
+    "                dist = centroid_distance(o[0], o[1], c[0], c[1])\n",
+    "                if dist < min_dist:\n",
+    "                    min_dist = dist\n",
+    "                    min_centroid = o\n",
+    "            object_locations[min_centroid] = c\n",
+    "\n",
+    "    # cv2 show centroids\n",
+    "    frame = cv2.imread(a.replace('txt', 'jpg'))\n",
+    "    for id, c in object_locations.items():\n",
+    "        cv2.circle(frame, (int(c[0]), int(c[1])), 5, (0, 0, 255), -1)\n",
+    "    cv2.imshow('frame', frame)\n",
+    "    cv2.waitKey(0)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -106,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
