--- a/objectTracking.ipynb
+++ b/objectTracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,15 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# annotations_path = 'outputs/yolo5_classification_ours/'\n",
-    "annotations_path = 'inputs/annotations/'\n",
+    "annotations_path = 'outputs/yolo5_classification/'\n",
+    "# annotations_path = 'inputs/annotations/'\n",
     "annotation_paths = Path(annotations_path).rglob('*.txt')\n",
     "annotation_paths = [str(a) for a in annotation_paths]\n",
-    "# annotation_paths = [a for a in annotation_paths if 'test' in a.lower()]\n",
+    "annotation_paths = [a for a in annotation_paths if 'original' in a.lower()]\n",
     "annotation_paths\n",
     "\n",
     "assert len(annotation_paths) != 0, 'No annotations found'\n"
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +296,18 @@
       "Video: Rain_1 Frames: 314 Annotations: 314\n",
       "Video: Wet_Bright Frames: 325 Annotations: 325\n",
       "Video: Wet_Dim Frames: 317 Annotations: 317\n",
-      "Video: Day_1 Frames: 1025 Annotations: 1025\n"
+      "Video: Day_1 Frames: 1025 Annotations: 0\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_35192/3921930873.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m         \u001b[0mannotation_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mannotation_files\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurr_frame\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m         \u001b[0mannotations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mannotation_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0mannotations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mannotations\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
