--- a/objectTracking.ipynb
+++ b/objectTracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,24 +87,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# annotations_path = 'outputs/yolo5_classification_ours/'\n",
-    "annotations_path = 'outputs/yolo5_classification/'\n",
-    "# annotations_path = 'inputs/annotations/'\n",
-    "annotation_paths = Path(annotations_path).rglob('*.txt')\n",
-    "annotation_paths = [str(a) for a in annotation_paths]\n",
-    "annotation_paths = [a for a in annotation_paths if 'original' in a.lower()]\n",
-    "annotation_paths\n",
+    "annotation_choice = 'ourYolo'\n",
+    "# annotation_choice = 'ogYolo'\n",
+    "# annotation_choice = 'ground_truth'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if annotation_choice == 'ourYolo':\n",
+    "    annotations_path = 'outputs/yolo5_classification_ours/'\n",
+    "    annotation_paths = Path(annotations_path).rglob('*.txt')\n",
+    "    annotation_paths = [str(a) for a in annotation_paths]\n",
+    "    annotation_paths = [a for a in annotation_paths if 'original' in a.lower()] # remove background and fg\n",
+    "\n",
+    "elif annotation_choice == 'ground_truth':\n",
+    "    annotations_path = 'inputs/annotations/'\n",
+    "    annotation_paths = Path(annotations_path).rglob('*.txt')\n",
+    "    annotation_paths = [str(a) for a in annotation_paths]\n",
+    "    # annotation_paths = [a for a in annotation_paths if 'original' in a.lower()] #no og in ground truth\n",
+    "    \n",
+    "elif annotation_choice == 'ogYolo':\n",
+    "    annotations_path = 'outputs/yolo5_classification/'\n",
+    "    annotation_paths = Path(annotations_path).rglob('*.txt')\n",
+    "    annotation_paths = [str(a) for a in annotation_paths]\n",
+    "    annotation_paths = [a for a in annotation_paths if 'original' in a.lower()] # remove background and fg\n",
+    "\n",
     "\n",
     "assert len(annotation_paths) != 0, 'No annotations found'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,26 +148,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "draw_bounding_boxes = True\n",
     "draw_centroids = True\n",
-    "draw_mid_line = True\n",
-    "draw_counts = True\n",
-    "vis = True\n",
+    "draw_mid_line = True    \n",
+    "draw_counts = True      # draw counts of cards\n",
+    "vis = True              #visualize everything \n",
     "\n",
-    "abandoned_patience = 20\n",
-    "minimum_distance = 60\n",
-    "x_cutoff = 0.5\n",
-    "y_cutoff = 0.5\n",
-    "frameTime = 1"
+    "abandoned_patience = 20 # how many frames to wait before centroid deleted\n",
+    "minimum_distance = 60   # distance to consider two centroids (in consecutive frames) the same\n",
+    "x_cutoff = 0.5          # line = x_res * this\n",
+    "y_cutoff = 0.5          \n",
+    "frameTime = 1           # delay between frames = how fast video showing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +328,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_35192/3921930873.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m         \u001b[0mannotation_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mannotation_files\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurr_frame\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m         \u001b[0mannotations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mannotation_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0mannotations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mannotations\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25992/3921930873.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m         \u001b[0mannotation_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mannotation_files\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurr_frame\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m         \u001b[0mannotations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mannotation_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0mannotations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mannotations\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
