--- a/objectTracking.ipynb
+++ b/objectTracking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +157,7 @@
     "draw_mid_line = True    \n",
     "draw_counts = True      # draw counts of cards\n",
     "vis = True              #visualize everything \n",
+    "save_video = False\n",
     "\n",
     "abandoned_patience = 20 # how many frames to wait before centroid deleted\n",
     "minimum_distance = 60   # distance to consider two centroids (in consecutive frames) the same\n",
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,12 +236,12 @@
     "        cv2.imshow('frame', frame)\n",
     "        if cv2.waitKey(frameTime) & 0xFF == ord('q'):\n",
     "            return False\n",
-    "    return True\n"
+    "    return True, frame\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -317,19 +318,7 @@
       "Video: Night_2 Frames: 321 Annotations: 321\n",
       "Video: Rain_1 Frames: 314 Annotations: 314\n",
       "Video: Wet_Bright Frames: 325 Annotations: 325\n",
-      "Video: Wet_Dim Frames: 317 Annotations: 317\n",
-      "Video: Day_1 Frames: 1025 Annotations: 0\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25992/3921930873.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m         \u001b[0mannotation_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mannotation_files\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurr_frame\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m         \u001b[0mannotations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mannotation_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0mannotations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mannotations\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "Video: Wet_Dim Frames: 317 Annotations: 317\n"
      ]
     }
    ],
@@ -347,6 +336,11 @@
     "    annotation_files = [a for a in annotation_paths if video_name.lower() in a.lower()]\n",
     "    annotation_files = [a for a in annotation_files if set.lower() in a.lower()]\n",
     "    sorted_annotation_files = sorted(annotation_files, key=lambda x: x.rsplit('.')[-2])\n",
+    "\n",
+    "\n",
+    "    if save_video:\n",
+    "        fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
+    "        out = cv2.VideoWriter(f'{video_name}_{set}.avi', fourcc, 30.0, (round(video.get(3)), round(video.get(4))))\n",
     "\n",
     "    print(f'Video: {video_name} Frames: {int(video.get(cv2.CAP_PROP_FRAME_COUNT))} Annotations: {len(annotation_files)}')\n",
     "    while True:\n",
@@ -366,7 +360,9 @@
     "        curr_centroids = getCentroids(annotations)\n",
     "        old_centroid_locations, object_locations, left_right, right_left = updateCentroids(frame, object_locations, curr_centroids, left_right, right_left)\n",
     "        updateAbandoned(old_centroid_locations, object_locations)\n",
-    "        toContinue = draw(frame, object_locations, left_right, right_left)\n",
+    "        toContinue, drawn_frame = draw(frame, object_locations, left_right, right_left)\n",
+    "        if save_video:\n",
+    "            out.write(drawn_frame)\n",
     "        if not toContinue:\n",
     "            break\n",
     "        \n",
