--- a/yolov5Inference.ipynb
+++ b/yolov5Inference.ipynb
@@ -21,7 +21,7 @@
     "video_path = 'inputs/media/Clips/'\n",
     "output_txt_path = 'outputs/yolo5_classification/'\n",
     "# custom_model = False\n",
-    "custom_model = True\n",
+    "custom_model = False\n",
     "\n",
     "def get_video_paths():\n",
     "    \"\"\"\n",
@@ -43,7 +43,7 @@
       "YOLOv5  2022-1-26 torch 1.10.1 CUDA:0 (NVIDIA GeForce RTX 2060, 6144MiB)\n",
       "\n",
       "Fusing layers... \n",
-      "Model Summary: 213 layers, 7023610 parameters, 0 gradients, 15.8 GFLOPs\n",
+      "Model Summary: 290 layers, 21172173 parameters, 0 gradients\n",
       "Adding AutoShape... \n"
      ]
     }
@@ -67,7 +67,7 @@
     {
      "data": {
       "text/plain": [
-       "'outputs/yolo5_classification_Ours/'"
+       "'outputs/yolo5_classification/'"
       ]
      },
      "execution_count": 4,
@@ -323,53 +323,37 @@
       "Frame: 317.0/317.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Train\\Day_1.mp4\n",
-      "Frame: 1025.0/1025.0\n",
+      "Frame: 94.0/1025.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Train\\Day_2.mp4\n",
-      "Frame: 924.0/924.0\n",
+      "Frame: 11.0/924.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Train\\Dry.mp4\n",
-      "Frame: 1202.0/1202.0\n",
+      "Frame: 12.0/1202.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Train\\Night_1.mp4\n",
-      "Frame: 1070.0/1070.0\n",
+      "Frame: 9.0/1070.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Train\\Night_2.mp4\n",
-      "Frame: 915.0/915.0\n",
+      "Frame: 3.0/915.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Train\\Rain_1.mp4\n",
-      "Frame: 1057.0/1057.0\n",
+      "Frame: 3.0/1057.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Train\\Wet_Bright.mp4\n",
-      "Frame: 1075.0/1075.0\n",
+      "Frame: 3.0/1075.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Train\\Wet_Dim.mp4\n",
-      "Frame: 1205.0/1205.0\n",
+      "Frame: 4.0/1205.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Valid\\Day_1.mp4\n",
-      "Frame: 305.0/305.0\n",
+      "Frame: 1.0/305.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Valid\\Day_2.mp4\n",
-      "Frame: 310.0/310.0\n",
+      "Frame: 2.0/310.0\n",
       "\n",
       "Labelling video: inputs\\media\\Clips\\Original\\Valid\\Dry.mp4\n",
-      "Frame: 324.0/324.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Valid\\Night_1.mp4\n",
-      "Frame: 322.0/322.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Valid\\Night_2.mp4\n",
-      "Frame: 311.0/311.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Valid\\Rain_1.mp4\n",
-      "Frame: 311.0/311.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Valid\\Wet_Bright.mp4\n",
-      "Frame: 325.0/325.0\n",
-      "\n",
-      "Labelling video: inputs\\media\\Clips\\Original\\Valid\\Wet_Dim.mp4\n",
-      "Frame: 317.0/317.0\n",
-      "\n"
+      "Frame: 48.0/324.0\r"
      ]
     }
    ],
@@ -379,7 +363,7 @@
     "# videos = [v for v in videos if 'test' in v.lower()]\n",
     "print('Found {} total videos'.format(len(videos)))\n",
     "\n",
-    "label_videos(videos, show_video=False,save=True)\n"
+    "label_videos(videos, show_video=True,save=False)\n"
    ]
   }
  ],
